' Generated by UML Generator
' Encoded: hLHDJ-Cm4BtdL_YOgXHnZg0YeXSG0gc57p2rfzIGsZ2URBN0zhUl7MyMkuHAhFQImtoyUVFUEEUEWRZTD8LxqkOP23P2Dk1SpKnwsJ9UIciM-XN5IR7M2eNK91iiYgvApF6bHSSr8OYtGeY995HeM4DJYOM7C0yX2fArDLd4TrogD6BijXBNLa8p0yOxlS4GfJZ0LQ8cWf_Nsl7fdw5p18Kq5MV2u3P9JyjHw9puppZXLtwcTYHoOaVYCmbVar4DsEC7vBhhB4V92cCmRejqPwzSp5mjRczkbuyeEMJPnigyvvciHET2y8VLglYr9stSydlY3akfhALSyjOXtS06CxIMrvQyuRvoQMs3OA8Fu9VAR8WzqnvwmNxMFbf8N3JMxQ6btiG5_zcTVAlE7OSyImcL9c7Lw_orYzhLVpK8cG_UOr1gtWbHHZq6G8TTFdmP-pUGsb06aofnxxznsKg4vRu-bnMXMyTxUGoMXUhCju_PXz_EVxfcRHXf1H9xYXsttK7qtI3wRW0z_G4T7xzF-o5Pmauc-NCgyiSrrDWBcUNEqIZ_i_mD
' URL: http://www.plantuml.com/plantuml/uml/hLHDJ-Cm4BtdL_YOgXHnZg0YeXSG0gc57p2rfzIGsZ2URBN0zhUl7MyMkuHAhFQImtoyUVFUEEUEWRZTD8LxqkOP23P2Dk1SpKnwsJ9UIciM-XN5IR7M2eNK91iiYgvApF6bHSSr8OYtGeY995HeM4DJYOM7C0yX2fArDLd4TrogD6BijXBNLa8p0yOxlS4GfJZ0LQ8cWf_Nsl7fdw5p18Kq5MV2u3P9JyjHw9puppZXLtwcTYHoOaVYCmbVar4DsEC7vBhhB4V92cCmRejqPwzSp5mjRczkbuyeEMJPnigyvvciHET2y8VLglYr9stSydlY3akfhALSyjOXtS06CxIMrvQyuRvoQMs3OA8Fu9VAR8WzqnvwmNxMFbf8N3JMxQ6btiG5_zcTVAlE7OSyImcL9c7Lw_orYzhLVpK8cG_UOr1gtWbHHZq6G8TTFdmP-pUGsb06aofnxxznsKg4vRu-bnMXMyTxUGoMXUhCju_PXz_EVxfcRHXf1H9xYXsttK7qtI3wRW0z_G4T7xzF-o5Pmauc-NCgyiSrrDWBcUNEqIZ_i_mD
' Generated on: 2025-10-19T17:47:47.669981942

@startuml
skinparam classAttributeIconSize 0
hide circle

class RequestArea {
  -credential: String
  -action: String
  -areaId: String
  -now: LocalDateTime
  -requests: ArrayList<RequestReader> = new ArrayList<>()
  --
  +RequestArea(credential: String, action: String, now: LocalDateTime, areaId: String)
  +getAction(): String
  +answerToJson(): JSONObject
  +toString(): String
  +process(): void
}

class RequestReader {
  -credential: String
  -action: String
  -now: LocalDateTime
  -doorId: String
  -userName: String
  -authorized: boolean
  -reasons: ArrayList<String>
  -doorStateName: String
  -doorClosed: boolean
  --
  +RequestReader(credential: String, action: String, now: LocalDateTime, doorId: String)
  +setDoorStateName(name: String): void
  +getAction(): String
  +isAuthorized(): boolean
  +addReason(reason: String): void
  +toString(): String
  +answerToJson(): JSONObject
  +process(): void
  -authorize(user: User, door: Door): void
}

class RequestRefresh {
  -jsonsDoors: ArrayList<JSONObject> = new ArrayList<>()
  --
  +answerToJson(): JSONObject
  +toString(): String
  +process(): void
}

interface Request {
  ~answerToJson(): JSONObject
  ~toString(): String
  ~process(): void
}

RequestArea ..|> Request
RequestArea o-- RequestReader
RequestReader ..|> Request
RequestRefresh ..|> Request
@enduml